# jirclip

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: config.rs  gui.rs  lib.rs  main.rs
